--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,10 @@ body {
 /* shadow filter */
 .filter {
     width: 100%;
-    height: calc(100vh - 90px);
+    /* height: calc(100vh - 90px); */
+    height: 500px;
     background-color: rgba(0, 0, 0, 0.3);
-    position: fixed;
+    position: absolute;
     z-index: 1;
 }
 
@@ -100,7 +101,7 @@ body {
 
 
 
-.banner > .container {
+.banner>.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -110,7 +111,6 @@ body {
     min-height: 299px;
     position: relative;
     z-index: 2;
-
 }
 
 .banner-title {
@@ -160,7 +160,7 @@ body {
     color: #f00;
 }
 
-.arrow-down{
+.arrow-down {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -172,7 +172,97 @@ body {
     bottom: 0px;
     transform: translateY(40%);
 }
-.arrow-down > img{
+
+.arrow-down>img {
     width: 21px;
     height: 21px;
+}
+
+/* blog section */
+
+.blog .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+.medium-headre-container{
+    margin: 90px 0 35px 0;
+
+}
+.medium-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.medium-header > span{
+    font-size: 35px;
+    line-height: 47px;
+    color: #000;
+    font-weight: 700;
+    display: inline-block;
+    padding: 0  10px ;
+}
+
+.medium-header::before,
+.medium-header::after{
+    content: "";
+    display: block;
+    height: 3px;
+    width: 50px;
+    background: #f00;
+    
+
+}
+.article-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+.article {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 350px;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+article:nth-of-type(2){
+    margin: 0 16px;
+}
+
+.article img{
+    width: 100%;
+    height: 100%;
+
+}
+
+article h3{
+    font-size: 19px;
+    line-height: 26px;
+    font-weight: 400;
+    color: #6a6a6a;
+    padding-top: 25px;
+}
+
+.article p{
+    font-size: 14px;
+    line-height: 19px;
+    color: #6a6a6a;
+    padding: 15px 0;
+    max-width: 260px;
+}
+
+.blog-btn{
+    font-size: 14px;
+    line-height: 19px;
+    font-weight: 700;
+    color: #fff;
+    background-color: #F00;
+    padding: 11px 30px;
+    border-radius: 40px;
+    text-decoration: none;
 }
