--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    max-width: 350px;
+    width: 30.3%;
     flex-grow: 1;
     flex-shrink: 0;
 }
