--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ body {
     flex-direction: column;
 
 }
-.medium-headre-container{
+.blog .medium-header-container{
     margin: 90px 0 35px 0;
 
 }
@@ -226,11 +226,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 30.3%;
-    flex-grow: 1;
-    flex-shrink: 0;
 }
-article:nth-of-type(2){
+.article:nth-of-type(2){
     margin: 0 16px;
 }
 
@@ -240,7 +237,7 @@ article:nth-of-type(2){
 
 }
 
-article h3{
+.article h3{
     font-size: 19px;
     line-height: 26px;
     font-weight: 400;
@@ -265,4 +262,69 @@ article h3{
     padding: 11px 30px;
     border-radius: 40px;
     text-decoration: none;
+}
+
+
+/* service section */
+
+.service {
+    background-color: #28272c;
+    padding: 60px 0 100px 0;
+}
+.service-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.service .medium-header-container{
+    padding-bottom: 75px;
+}
+.service  .medium-header > span{
+    color: #fff;
+}
+
+.service-article{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.service article:nth-last-child(n+2){
+    margin-right: 45px;
+}
+.service img{
+    height: 170px;
+    width: 170px;
+    margin: 0 auto;
+    padding-bottom: 15px;
+}
+
+.service-article h3{
+    font-size: 19px;
+    line-height: 26px;
+    font-weight: 400;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.service-article p{
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19px;
+    color: #b2b2b2;
+    text-align: center;
+    padding: 15px 0;
+}
+
+.service-btn{
+    font-size: 14px;
+    line-height: 19px;
+    font-weight: 700;
+    color: #fff;
+    text-decoration: none;
+    background-color: #ff0000;
+    padding: 11px 29px;
+    border-radius: 40px;
+
 }
