--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ body {
 }
 
 .article p {
+    font-family: "Open Sans", sans-serif;
     font-size: 14px;
     line-height: 19px;
     color: #6a6a6a;
@@ -431,7 +432,7 @@ textarea:focus {
     margin-left: 14px;
 }
 
-.agreement input{
+.agreement input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
@@ -440,11 +441,14 @@ textarea:focus {
 }
 
 /* jak zrobić obrazek checked ? */
-.agreement input:checked  + span{
-    border: 5px solid #f00;
+.agreement input:checked+span {
+    /* border: 5px solid #f00; */
+    background-image: url(../images/Icon\ Check.svg);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.agreement span{
+.agreement span {
     flex-shrink: 0;
     width: 22px;
     height: 22px;
@@ -457,13 +461,13 @@ textarea:focus {
     box-sizing: border-box;
 }
 
-.agreement > span > img{
+.agreement>span>img {
     margin: 0 auto;
     /* filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(72deg) brightness(110%) contrast(101%) */
     /* filter: invert(19%) sepia(99%) saturate(5790%) hue-rotate(357deg) brightness(103%) contrast(117%); */
 }
 
-.send-btn{
+.send-btn {
     font-size: 14px;
     background-image: 19px;
     font-weight: 700;
@@ -476,6 +480,88 @@ textarea:focus {
     margin-top: 20px;
     text-decoration: none;
 }
-.send-btn:active{
+
+.send-btn:active {
     box-shadow: 0 3px 6px #FF00004D;
 }
+
+/* footer section */
+.footer {
+    background-color: #28272C;
+}
+
+.footer .container {
+    padding-bottom: 39px;
+}
+
+.logo-container {
+    padding: 40px 0 22px 0;
+}
+
+.footer-logo {
+    width: 16px;
+    height: 19px;
+}
+
+.footer-logo>a {
+    font-family: 'Nunito Sans', sans-serif;
+    margin-left: 8px;
+    font-size: 25px;
+    line-height: 34px;
+}
+
+.footer-logo span {
+    margin-right: 8px;
+}
+
+.footer-nav-container {
+    display: flex;
+    justify-content: space-between;
+    height: 92px;
+}
+
+.foter-nav {
+    display: flex;
+
+}
+.footer-nav-list{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 92px;
+}
+.footer-nav-list:first-of-type{
+    margin-right: 100px;
+}
+
+.footer-nav-list li{
+    padding-bottom: 5px;
+
+}
+.footer-nav-list a {
+    font-size: 14px;
+    line-height: 18px;
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.copyright{
+    display: flex;
+    align-content: flex-end;
+    align-items: flex-end;
+}
+
+.copyright p{
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 16px;
+    color: #D1D1D1;
+}
+
+
+/* todo list: */
+/* style first word in footer nav to red color*/
+/* shade filter on first section background */
+/* anchor tags to header navbar */
+/* add overflow hidden to article text to prevent container growing */
